# InferProject

./: .gitignore  benchmark_fragmentation.cpp  continuous_batching_changes.md  continuous_batching_implementation.md  operators_reference.md  projectstructure.md
demo/: main.cpp  main_old.cpp
kuiper/include/base/: base.h  block_manager.h  scheduler.h
kuiper/include/model/: kv_cache_manager.h  llama3.h  model.h
kuiper/include/op/: mha.h
kuiper/source/base/: scheduler.cpp
kuiper/source/model/: llama3.cpp
kuiper/source/op/: layer.cpp  matmul.cpp  mha.cpp  rope.cpp
kuiper/source/op/kernels/: kernels_interface.h
kuiper/source/op/kernels/cpu/: mha_kernel.cpp  mha_kernel.h
kuiper/source/op/kernels/cuda/: kvcache_kernel.cu  kvcache_kernel.cuh  matmul_kernel.cu  mha_kernel.cu  mha_kernel.cuh  rope_kernel.cu  rope_kernel.cuh
kuiper/source/tensor/: tensor.cpp
test/: CMakeLists.txt  bench_matmul_vs_cublas.cpp
test/test_op/: test_cu_paged_mha.cpp
